<resources>
    <string name="app_name">Pharma Connect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">M.Mouttaki</string>
    <string name="nav_header_subtitle">mehdimouttaki99@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="your_address">My Address</string>
    <string name="my_account">My Account</string>
    <string name="my_commands">My Commands</string>
    <string name="pharmacies">Pharmacies</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="role">Role</string>


</resources>