<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_your_address"
            android:icon="@drawable/ic_location"
            android:title="@string/your_address" />
        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_user"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_my_commands"
            android:icon="@drawable/ic_commands"
            android:title="@string/my_commands" />
        <item
            android:id="@+id/nav_pharmacies"
            android:icon="@drawable/ic_pharmacy"
            android:title="@string/pharmacies" />

    </group>
</menu>